Add core services for advanced features
- MapsService: Google Maps integration with autocomplete, geocoding, and routing
- SocketService: Real-time Socket.IO client for live tracking and notifications
- StripeService: Payment processing with secure card elements (partial)

- Location autocomplete and place search
- Current location detection with geolocation
- Route calculation and display
- Custom map styling and markers
- Fare estimation based on distance and vehicle type

- Socket.IO connection management with authentication
- Ride status and location updates
- Driver availability tracking
- Emergency alerts and notifications
- Real-time communication between drivers and patients

- Stripe integration setup
- Secure payment element creation
- Payment method management framework

- Complete ride booking form with maps
- Enhanced patient dashboard
- Payment processing UI
- Push notifications setup

--- a/package.json
+++ b/package.json
@@ -35,7 +35,13 @@
     "zone.js": "~0.14.0",
     "socket.io-client": "^4.7.4",
     "@stripe/stripe-js": "^2.1.0",
-    "@angular/service-worker": "^17.0.0"
+    "@angular/service-worker": "^17.0.0",
+    "@angular/google-maps": "^17.0.0",
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "firebase": "^10.7.0",
+    "@angular/fire": "^17.0.0",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/geolocation": "^5.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.0",
